--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text" target="_blank">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -177,16 +177,12 @@
 
 
         <div class=" grey darken-3" style="margin-top: 0px;">
-            <div class="container center padded-bottom-cozy padded-top-cozy" style="margin-left: 150px;">
-
-
-
-
-                <div class="row" style="width: 1200px;">
+            <div class="center padded-bottom-cozy padded-top-cozy">
+                <div class="row" style=" margin-left: 0px;">
                    <h3 class="center orange-text strong" data-aos="zoom-in"> Objectives</h3>
                 <br><br><br>
 
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m4 l3" style="width: 230px; margin-left: 170px">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 536.229 536.229" style="enable-background:new 0 0 536.229 536.229;" xml:space="preserve">
 <g>
 	<g>
@@ -232,10 +228,10 @@
 </svg>
 
 
-                        <p class="flow-text light orange-text" style="font-size: 20px;text-align: left;margin-left: 80px">Building an IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Building an <br> IoT solution</p>
                     </div>
 
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -324,11 +320,11 @@
 </g>
 </svg>
                         <p class="flow-text light orange-text" style="font-size: 20px;">
-                            Exposure to newer technologies
+                            Exposure to <br> newer technologies
                         </p>
                     </div>
 
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -375,11 +371,11 @@
 </g>
 </svg>
                         <p class="flow-text light orange-text" style="font-size: 19px;">
-                            Learn from the market leaders
+                            Learn from <br> market leaders
                         </p>
                     </div>
 
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
 <g>
 	<g id="explore">
@@ -418,7 +414,7 @@
 </g>
 </svg>
                         <p class="flow-text light orange-text" style="font-size: 19px;">
-                            Exploring the latest innovations
+                            Exploring the <br>latest innovations
                         </p>
                     </div>
                 </div>
@@ -450,7 +446,7 @@
                   -->
                     <h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
                     <p class="center">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">Register now</a>
                     </p>
 
                 </div>
@@ -1442,8 +1438,8 @@
                 <div class="row">
                     <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
                     <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
-                    <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
-                    <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
+                    <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+                    <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
                 </div>
             </div>
         </section>
