--- a/hackathon.html
+++ b/hackathon.html
@@ -520,7 +520,7 @@ c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
             accordion: false
         });
 
-        $(document).ready(function() {
+        /*$(document).ready(function() {
 
 
             $('.prize').tilt({
@@ -529,7 +529,7 @@ c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
                 glare: false, // Enables glare effect
                 //maxGlare: 0.4 // From 0 - 1.
             });
-        });
+    });*/
 
     </script>
 
