--- a/conference.html
+++ b/conference.html
@@ -174,13 +174,13 @@ fill="#ff9800" stroke="none">
 
 
 
-        <section class="padded-top-comfortable padded-bottom-comfortable grey lighten-3">
+        <section class="padded-top-comfortable padded-bottom-comfortable grey darken-3">
 
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h2 class="center strong orange-text " data-aos="zoom-in">Some highlights of event</h2>
-                <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                <h2 class="center strong yellow-text text-accent-2 " data-aos="zoom-in">Some highlights of event</h2>
+                <p class="center orange-text padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
             </div>
         </section>
 
@@ -246,16 +246,16 @@ fill="#ff9800" stroke="none">
 
         <div class="divider"></div>
 
-        <section class="padded-top-comfortable padded-bottom-comfortable grey lighten-3">
+        <section class="padded-top-comfortable padded-bottom-comfortable grey darken-3">
             <div class="row container">
-                <h2 class="center strong orange-text padded-bottom-comfortable" data-aos="zoom-in">Topics</h2>
+                <h2 class="center strong yellow-text text-accent- padded-bottom-comfortable" data-aos="zoom-in">Topics</h2>
                 <ul class="collapsible expandable">
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
                             <i class="material-icons orange-text">adjust</i>
                             <p class="grey-text text-darken-2">Topic Name</p>
                         </div>
-                        <div class="collapsible-body grey lighten-2">
+                        <div class="collapsible-body grey ">
                             <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                         </div>
                     </li>
@@ -264,7 +264,7 @@ fill="#ff9800" stroke="none">
                             <i class="material-icons orange-text">adjust</i>
                             <p class="grey-text text-darken-2">Topic Name</p>
                         </div>
-                        <div class="collapsible-body">
+                        <div class="collapsible-body grey">
                             <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                         </div>
                     </li>
@@ -273,7 +273,7 @@ fill="#ff9800" stroke="none">
                             <i class="material-icons orange-text">adjust</i>
                             <p class="grey-text text-darken-2">Topic Name</p>
                         </div>
-                        <div class="collapsible-body">
+                        <div class="collapsible-body grey">
                             <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                         </div>
                     </li>
@@ -282,7 +282,7 @@ fill="#ff9800" stroke="none">
                             <i class="material-icons orange-text">adjust</i>
                             <p class="grey-text text-darken-2">Topic Name</p>
                         </div>
-                        <div class="collapsible-body">
+                        <div class="collapsible-body grey">
                             <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                         </div>
                     </li>
@@ -291,7 +291,7 @@ fill="#ff9800" stroke="none">
                             <i class="material-icons orange-text">adjust</i>
                             <p class="grey-text text-darken-2">Topic Name</p>
                         </div>
-                        <div class="collapsible-body">
+                        <div class="collapsible-body grey">
                             <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                         </div>
                     </li>
