--- a/hackathon.html
+++ b/hackathon.html
@@ -102,7 +102,7 @@
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
 
-                        <h1 class="light center white-text">SMART   INDUSTRY   HACKATHON</h1>
+                        <h1 class="light center white-text strong">SMART   INDUSTRY   HACKATHON</h1>
 
 
                     </div>
@@ -208,8 +208,8 @@
         <div class="divider" x></div>
 
 
-        <section class="padded-cozy grey lighten-3">
-            <h3 class="orange-text center padded-bottom-cozy strong">Prizes</h3>
+        <section class="padded-cozy grey darken-3">
+            <h3 class="yellow-text text-accent-2 center padded-bottom-cozy strong">Prizes</h3>
 
             <div class="container">
                 <div class="row">
@@ -306,12 +306,12 @@
 
 
 
-        <section class="grey lighten-3">
+        <section class="grey darken-3">
             <div class="container padded-top-cozy padded-bottom-cozy">
 
-                <h3 class="orange-text center padded-bottom-comfortable strong"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="30.000000pt" height="30.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
+                <h3 class="yellow-text text-accent-2 center padded-bottom-comfortable strong"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="30.000000pt" height="30.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,50.000000) scale(0.100000,-0.100000)"
-fill="#ff9800" stroke="none">
+fill="#ffff00" stroke="none">
 <path d="M145 462 c-49 -23 -99 -78 -115 -127 -7 -20 -10 -67 -8 -105 5 -87
 40 -141 119 -183 48 -26 61 -28 122 -24 80 5 132 36 180 104 24 33 30 55 34
 110 4 61 2 74 -24 122 -17 32 -45 66 -71 85 -39 27 -53 31 -120 34 -59 2 -87
@@ -323,7 +323,7 @@ c0 -38 3 -70 8 -70 8 0 127 258 121 264 -2 2 -59 -22 -126 -53z"/>
 </svg> Guidelines
                 </h3>
 
-                <p>
+                <p class="orange-text">
 
 
 
