--- a/mentors.html
+++ b/mentors.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <header>
         <div class="navbar-fixed">
             <nav class=" grey darken-3">
@@ -25,23 +26,25 @@
                     <a href="href="index.html data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
-                    <a href="index.html" class="brand-logo black-text"><img src="images/Logo_.jpg%20copy.png"></a>
+                    <a href="index.html" class="brand-logo black-text">
+                        <img src="images/Logo_.jpg%20copy.png">
+                    </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
+                            <a class="waves-effect waves-orange" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="hackathon.html">Hackathon</a>
+                            <a class="waves-effect waves-orange" href="hackathon.html">Hackathon</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="conference.html">Conference</a>
+                            <a class="waves-effect waves-orange" href="conference.html">Conference</a>
                         </li>
 
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="contact.html">Contact</a>
+                            <a class="waves-effect waves-orange" href="contact.html">Contact</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+                            <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
@@ -58,7 +61,7 @@
                 <a class="waves-effect" href="index.html">Home</a>
             </li>
             <li>
-                <a class="waves-effect" href="Hackathon.html">Hackathon</a>
+                <a class="waves-effect" href="hackathon.html">Hackathon</a>
             </li>
             <li>
                 <a class="waves-effect" href="conference.html">Conference</a>
@@ -75,6 +78,8 @@
             </li>
         </ul>
     </header>
+
+
 
 
 
