--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
     <main>
         <section>
 
-            <div id="hero-slider" class="valign-wrapper screen-height">
+            <div id="hero-slider" class="screen-height">
+                <div style="margin-top: 0px;">
+                            <img src="images/CII%20logo%20copy.png" alt="">
+                        </div>
                 <div class="container center padded-top-cozy">
                     <div class="caption center">
                         <!--
@@ -95,7 +98,7 @@
                         <p class="white-text">Date: XX Month 2018</p>
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                         -->
-                        <img src="images/ciilogo.png" alt="">
+                       <br><br><br>
                         <img src="images/Logo_.jpg copy.png" alt="logo" style="max-width:80vw; max-height: 40vh">
                     </div>
                     <i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i>
