--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div id="hero-slider" class="screen-height">
                 <div style="margin-top: 0px;">
-                            <img src="images/CII%20logo%20copy.png" alt="">
+                            <img src="images/ciilogocopy.png" alt="">
                         </div>
                 <div class="container center padded-top-cozy">
                     <div class="caption center">
@@ -478,7 +478,7 @@
 
                     <h3 class="center light orange-text padded-bottom-compact padded-top-cozy strong " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
                     <div class="row">
-                        <div class="col s12 m6 l6">
+                        <div class="col s12 m6 l6" style="border-right: 1px solid orange">
                             <br>
 
 
