--- a/index.html
+++ b/index.html
@@ -1677,7 +1677,7 @@
             </div>
             <div class="footer-copyright ">
                 <div class="container ">
-                    <a href="https://dayshmookh.github.io/ " class="white-text " target="_blank ">© 2018 R00T INC.</a>
+                    <a href="https://dayshmookh.github.io/ " class="white-text right " target="_blank ">© 2018 R00T INC.</a>
                     <!--<a class="white-text right " href="#! ">More Links</a>-->
                 </div>
             </div>
