--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h3 class="center orange-text strong" data-aos="zoom-in">IndNX 4.0</h3>
                 <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (<span class="grey-text text-darken-3">Edition 1</span>)</h5>
 
-                <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">There's a lot of hype about terms like <span class="up">IOT</span>, IIoT, Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique <span class="upone"> Industry-Institution </span>interaction event called <span class="up">IndNX 4.0</span> - Smart Industry Hackathon (Edition 1).</p>
+                <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">There's a lot of hype about terms like <span class="up">IoT</span>, IIoT, Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique <span class="upone"> Industry-Institution </span>interaction event called <span class="up">IndNX 4.0</span> - Smart Industry Hackathon (Edition 1).</p>
             </div>
         </section>
 
@@ -1537,7 +1537,7 @@
                     </div>
                     <div class="col l2 s4" style="width: 130px">
 
-                        <div style="padding-left: 10px">
+                        <div style="padding-left: 10px;width: 180px;">
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 408.788 408.788" width="30px" height="30px" style="enable-background:new 0 0 408.788 408.788;" xml:space="preserve">
@@ -1626,8 +1626,8 @@
 </svg>
 
 
-<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px"
-	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<a href="#"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px"
+	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;margin-left: 20px;" xml:space="preserve">
 <path style="fill:#03A9F4;" d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016
 	c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992
 	c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056
@@ -1667,6 +1667,7 @@
 <g>
 </g>
 </svg>
+</a>
 
 
                         </div>
