--- a/hackathon.html
+++ b/hackathon.html
@@ -20,12 +20,6 @@
 
 
 </head>
-<style>
-    * {
-        font-family: 'Montserrat', sans-serif;
-    }
-
-</style>
 
 <body>
 
@@ -103,6 +97,9 @@
                     <div class="container full-width">
 
                         <h1 class="light center white-text strong">SMART   INDUSTRY   HACKATHON</h1>
+                        <p class="center">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat" id="registerbtn" target="_blank">Register now</a>
+                        </p>
 
 
                     </div>
@@ -157,14 +154,12 @@
             </div>
         </section>-->
         <br>
-        <p class="center">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat" id="registerbtn">Register now</a>
-        </p>
+       
         <br>
         <div class="row">
-            <div class="col s12 l6 center">
+            <div class="container">
                 <!--<h4 class="orange-text strong">Event Dates</h4>-->
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
+               <!-- <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
                     <g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
                     fill="#ff9800" stroke="none">
                     <path d="M120 570 c0 -28 -2 -30 -40 -30 l-40 0 0 -240 0 -240 270 0 270 0 0
@@ -182,13 +177,25 @@
                 <br><br>
 
                 <div class="divider" id="eventdivider"></div>
-                <p id="dates"><!--Hackathon Registration - <span class="orange-text">5th July - 15th July</span>
-                    <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation --> <br>  <span style="font-size: 30px;" class="orange-text">17th <span class="black-text">Sept. </span>- 21st <span class="black-text">Sept. </span></span>
-                </p>
+                <p id="dates"><Hackathon Registration - <span class="orange-text">5th July - 15th July</span>
+                    <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation  <br>  <span style="font-size: 30px;" class="orange-text">17th <span class="black-text">Sept. </span>- 21st <span class="black-text">Sept. </span></span>
+                </p>-->
+
+
+
+                <!--<h6 class="center light grey-text">About</h6>-->
+                <h3 class="center orange-text strong" data-aos="zoom-in">IndNX 4.0</h3>
+                <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (<span class="grey-text text-darken-3">Edition 1</span>)</h5>
+
+                <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">
+                    The event aims at eradicating ignorance by <span class="up">educating</span> students about the clear picture of the cutting edge <span class="up">technologies</span> with real time use-cases, just technology layer <span class="up">discussions</span> and encourage the students to <span class="up">prepare, adapt, thrive</span>, and lead in the next major technology growth area – IoT.</p>
+          
+                <br><br>
+
             </div>
-            <div class="col s12 l6 center">
-                <!--<h4 class="orange-text strong">Event Venue</h4>-->
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
+            <!--<div class="col s12 l6 center">
+                <h4 class="orange-text strong">Event Venue</h4>-->
+               <!-- <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
                     <g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
                     fill="#ff9800" stroke="none">
                     <path d="M160 467 c-115 -77 -91 -239 65 -441 21 -28 40 -15 94 69 113 173
@@ -203,7 +210,7 @@
                 <br>
                 <div class="divider" id="eventdivider"></div>
                 <p id="venue"><span class="orange-text">TCS</span> Mihan</p>
-            </div>
+            </div>-->
         </div>
         <div class="divider" x></div>
 
