link removed of free privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -104,7 +104,7 @@
 
 <p>IndNX 4.0 ("us", "we", or "our") operates the http://127.0.0.1:52566/index.html website (the "Service").</p>
 
-<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. This Privacy Policy  for IndNX 4.0 is powered by <a href="https://freeprivacypolicy.com/">FreePrivacyPolicy.com</a>.</p>
+<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
 <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from http://127.0.0.1:52566/index.html</p>
 
