--- a/hackathon.html
+++ b/hackathon.html
@@ -359,7 +359,7 @@ c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
 6 0 15 -7 21 -16z m204 -228 l0 -25 -155 0 c-144 0 -155 1 -155 18 0 10 3 22
 7 25 3 4 73 7 155 7 l148 0 0 -25z"/>
 </g>
-</svg> Technology info</h3>
+</svg> Technology Info</h3>
 
                 <p>
 
