--- a/hackathon.html
+++ b/hackathon.html
@@ -188,7 +188,7 @@
                 <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (<span class="grey-text text-darken-3">Edition 1</span>)</h5>
 
                 <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">
-                    The event aims at eradicating ignorance by <span class="up">educating</span> students about the clear picture of the cutting edge <span class="up">technologies</span> with real time use-cases, just technology layer <span class="up">discussions</span> and encourage the students to <span class="up">prepare, adapt, thrive</span>, and lead in the next major technology growth area – IoT.</p>
+                    The <span class="up">event</span> aims at eradicating ignorance by <span class="up">educating</span> students about the clear picture of the cutting edge <span class="up">technologies</span> with real time use-cases, just technology layer <span class="up">discussions</span> and encourage the students to <span class="up">prepare, adapt, thrive</span>, and lead in the next major technology growth area – IoT.</p>
           
                 <br><br>
 
@@ -298,7 +298,33 @@
                 </p>-->
                 <div class="container center padded-top-compact">
 
-                    <img src="images/domain.png" alt="" style="max-width: 90vw;">
+                    <!--<img src="images/domain.png" alt="" style="max-width: 90vw;">-->
+
+                    <div class="row">
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/1.png" alt="">
+                            </div>
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/2.png" alt="">
+                            </div>
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/3.png" alt="">
+                            </div>
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/4.png" alt="">
+                            </div>
+                    </div>
+                    <div class="row">
+                            <div class="col s12 m4 l4" style="width: 250px;">
+                                <img src="images/domain/5.png" alt="">
+                            </div>
+                            <div class="col s12 m4 l4" style="width: 250px;">
+                                <img src="images/domain/6.png" alt="">
+                            </div>
+                            <div class="col s12 m4 l4" style="width: 250px;">
+                                <img src="images/domain/7.png" alt="">
+                            </div>
+                    </div>
 
                 </div>
             </div>
