--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 
                         <div class="col s12 m6 l6">
                             <br>
-                            <h3 class="center light orange-text strong">Conference on IIOT</h3>
+                            <h3 class="center light orange-text strong">IndNX 4.0</h3>
                             <br>
                             <br>
                             <br>
