--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     <h3 class="light center white-text strong" style="font-size: 100px;">Register</h3>
                     <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
                   -->
-                    <h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
+                    <h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2018</h2>
                     <p class="center">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">Register now</a>
                     </p>
