--- a/index.html
+++ b/index.html
@@ -1486,8 +1486,8 @@
 
     <section style="border-top: 6px solid orange">
         <div class="parallax-container" style="height: 35vh;">
+           <img src="images/ciilogocopy%20copy.png" alt="" style="margin-left: 0px;">
             <div class="container">
-                <br><br>
                 <div class="row">
                     <div class="col l6 s12">
                         <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
@@ -1679,6 +1679,7 @@
             <div class="footer-copyright ">
                 <div class="container ">
                     <a href="https://dayshmookh.github.io/ " class="white-text right " target="_blank ">© 2018 R00T INC.</a>
+                    <br><br><br>
                     <!--<a class="white-text right " href="#! ">More Links</a>-->
                 </div>
             </div>
@@ -1712,3 +1713,4 @@
 </body>
 
 </html>
+/
