--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@
         <!-- Map -->
         <section style="width: 100%; padding: 0px" id="venue-container">
 
-            <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.370178485649!2d79.05011731511902!3d21.097802985961046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4bf979088dc35%3A0xf7c02527fb718026!2sSyslogyx+Technologies+Private+Limited!5e0!3m2!1sen!2sin!4v1531381659030" width="1500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 
