--- a/hackathon.html
+++ b/hackathon.html
@@ -215,10 +215,60 @@
         <div class="divider" x></div>
 
 
-        <section class="padded-cozy grey darken-3">
-            <h3 class="yellow-text text-accent-2 center padded-bottom-cozy strong">Prizes</h3>
+        <section class="padded-bottom-cozy grey darken-3 ">
+            <div id="domain">
+
+                <h3 class="orange-text center strong">Domains</h3>
+                <!-- <p class="center light flow-text">
+                    1. Life Science, Textile, Healthcare & Pharmacy
+                    <br> 2. Automobile, Defence & Aerospace
+                    <br> 3. Logistics, Supply Chain & Warehousing
+                    <br> 4. Travel, Transport & Hospitality
+                    <br> 5. Agriculture & Food Processing
+                    <br> 6. Energy & Environment
+                    <br> 7. Government & Citizen Services
+
+                </p>-->
+                <div class="container center padded-top-compact">
+
+                    <img src="images/prize.png" alt="" style="max-width: 90vw;">
+
+                    <!--<div class="row">
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/1.png" alt="">
+                            </div>
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/2.png" alt="">
+                            </div>
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/3.png" alt="">
+                            </div>
+                            <div class="col s12 l3" style="width: 250px;">
+                                <img src="images/domain/4.png" alt="">
+                            </div>
+                    </div>
+                    <div class="row">
+                            <div class="col s12 m4 l4" style="width: 250px;">
+                                <img src="images/domain/5.png" alt="">
+                            </div>
+                            <div class="col s12 m4 l4" style="width: 250px;">
+                                <img src="images/domain/6.png" alt="">
+                            </div>
+                            <div class="col s12 m4 l4" style="width: 250px;">
+                                <img src="images/domain/7.png" alt="">
+                            </div>
+                    </div>-->
+
+                </div>
+            </div>
+
+        </section>
+
+<!--        <section class="grey darken-3">
+            <h3 class="yellow-text text-accent-2 center strong">Prizes</h3>
 
             <div class="container">
+               <img src="images/prize.png" alt="" style="max-width: 90vw;">
                 <div class="row">
 
 
@@ -268,13 +318,15 @@
                             </div>
                         </div>
                     </div>
+
+                    <img src="images/prize.png" alt="" style="max-width: 90vw">
                 </div>
             </div>
 
 
 
 
-        </section>
+        </section>-->
 
 
         <div class="divider"></div>
@@ -298,9 +350,9 @@
                 </p>-->
                 <div class="container center padded-top-compact">
 
-                    <!--<img src="images/domain.png" alt="" style="max-width: 90vw;">-->
+                    <img src="images/domain.png" alt="" style="max-width: 90vw;">
 
-                    <div class="row">
+                    <!--<div class="row">
                             <div class="col s12 l3" style="width: 250px;">
                                 <img src="images/domain/1.png" alt="">
                             </div>
@@ -324,7 +376,7 @@
                             <div class="col s12 m4 l4" style="width: 250px;">
                                 <img src="images/domain/7.png" alt="">
                             </div>
-                    </div>
+                    </div>-->
 
                 </div>
             </div>
