--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <a href="index.html" class="brand-logo black-text">
-                        <img src="images/Logo_.jpg%20copy.png">
+                        <img src="images/logo3.png">
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
@@ -99,7 +99,7 @@
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                         -->
                        <br><br><br>
-                        <img src="images/Logo_.jpg copy.png" alt="logo" style="max-width:80vw; max-height: 40vh">
+                        <img src="images/logo3.png" alt="logo" style="max-width:80vw; max-height: 40vh">
                     </div>
                     <i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i>
                 </div>
@@ -116,7 +116,7 @@
                 <h3 class="center orange-text strong" data-aos="zoom-in">IndNX 4.0</h3>
                 <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (<span class="grey-text text-darken-3">Edition 1</span>)</h5>
 
-                <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">There's a lot of hype about terms like <span class="up">IoT</span>, IIoT, Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique <span class="upone"> Industry-Institution </span>interaction event called <span class="up">IndNX 4.0</span> - Smart Industry Hackathon (Edition 1).</p>
+                <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">There's a lot of hype about terms like IoT, <span class="up">IIoT</span> , Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique <span class="upone"> Industry-Institution </span>interaction event called <span class="up">IndNX 4.0</span> - Smart Industry Hackathon (Edition 1).</p>
             </div>
         </section>
 
@@ -678,7 +678,7 @@
 	<path d="M113.632,169.025c-3.056-3.059-8.257-3.256-11.526-0.417l-92.019,82.497c-3.284,2.836-3.467,7.663-0.405,10.725   l25.064,25.046c3.064,3.062,7.882,2.891,10.715-0.375l82.522-92.046c2.823-3.266,2.644-8.449-0.421-11.507L113.632,169.025z" fill="#FFDA44"/>
 </g>
 </svg>
-                            <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an <br> end to end IoT solution</p>
+                            <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an <br> end to end IIoT solution</p>
 
 
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 174.661 174.661" style="enable-background:new 0 0 174.661 174.661;" xml:space="preserve">
@@ -1218,7 +1218,7 @@
 <g>
 </g>
 </svg>
-                        <p class="orange-text light center" style="font-size: 19px;">branding strategy with academic mission
+                        <p class="orange-text light center" style="font-size: 19px;">Branding strategy with academic mission
                         </p>
                     </div>
                 </div>
@@ -1267,7 +1267,7 @@
 </g>
 </svg>
 
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Moving Forward <br>With IOT</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Moving Forward <br>With IIoT</p>
                     </div>
 
                     <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
@@ -1486,11 +1486,12 @@
 
     <section style="border-top: 6px solid orange">
         <div class="parallax-container" style="height: 35vh;">
+
            <img src="images/ciilogocopy%20copy.png" alt="" style="margin-left: 0px;">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
-                        <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
+                        <img src="images/logo3.png" class="col s6 ">
                         <!--<p class="white-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
                         from diffrent sectors and Institutes</p>-->
                     </div>
@@ -1541,7 +1542,7 @@
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 408.788 408.788" width="30px" height="30px" style="enable-background:new 0 0 408.788 408.788;" xml:space="preserve">
-<path style="fill:#475993;" d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
+<path style="fill:#5c6bc0;" d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
 	h147.275l0.251-146.078h-37.951c-4.932,0-8.935-3.988-8.954-8.92l-0.182-47.087c-0.019-4.959,3.996-8.989,8.955-8.989h37.882
 	v-45.498c0-52.8,32.247-81.55,79.348-81.55h38.65c4.945,0,8.955,4.009,8.955,8.955v39.704c0,4.944-4.007,8.952-8.95,8.955
 	l-23.719,0.011c-25.615,0-30.575,12.172-30.575,30.035v39.389h56.285c5.363,0,9.524,4.683,8.892,10.009l-5.581,47.087
@@ -1584,7 +1585,7 @@
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 382 382" width="30px" height="30px" style="enable-background:new 0 0 382 382;margin-left: 10px" xml:space="preserve">
-<path style="fill:#0077B7;" d="M347.445,0H34.555C15.471,0,0,15.471,0,34.555v312.889C0,366.529,15.471,382,34.555,382h312.889
+<path style="fill:#42a5f5;" d="M347.445,0H34.555C15.471,0,0,15.471,0,34.555v312.889C0,366.529,15.471,382,34.555,382h312.889
 	C366.529,382,382,366.529,382,347.444V34.555C382,15.471,366.529,0,347.445,0z M118.207,329.844c0,5.554-4.502,10.056-10.056,10.056
 	H65.345c-5.554,0-10.056-4.502-10.056-10.056V150.403c0-5.554,4.502-10.056,10.056-10.056h42.806
 	c5.554,0,10.056,4.502,10.056,10.056V329.844z M86.748,123.432c-22.459,0-40.666-18.207-40.666-40.666S64.289,42.1,86.748,42.1
@@ -1676,16 +1677,11 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright ">
-                <div class="container ">
-                    <a href="https://dayshmookh.github.io/ " class="white-text right " target="_blank ">© 2018 R00T INC.</a>
-                    <br><br><br>
-                    <!--<a class="white-text right " href="#! ">More Links</a>-->
-                </div>
-            </div>
+
             <div class="parallax"><img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2; filter: brightness(30%) saturate(150%);">
 
             </div>
+
         </div>
     </section>
     <script src="js/jquery.min.js "></script>
